k8s/blue-green/deployment-blue.yaml
# =============================================================================
# deployment-blue.yaml — slot BLUE
# =============================================================================
# Labels:
#   app=app-go
#   slot=blue
#
# Essas labels são utilizadas pelos Services:
#   app-go-blue
#   app-go-active
# =============================================================================

apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-go-blue
  namespace: blue-green
  labels:
    app: app-go
    slot: blue

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app-go
      slot: blue

  template:
    metadata:
      labels:
        app: app-go
        slot: blue

    spec:
      serviceAccountName: app-go-sa

      containers:
        - name: app
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 5000

          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
